[FIX]Fixed the issue of statusbar which is aligned wrongly for nosheet view, float should always be right for statusbar ul.

--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset "utf-8";
 @font-face {
   font-family: "mnmliconsRegular";
   src: url("/web/static/src/font/mnmliconsv21-webfont.eot") format("eot");
@@ -8,7 +8,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 @font-face {
   font-family: "EntypoRegular";
   src: url("/web/static/src/font/entypo-webfont.eot") format("eot");
@@ -19,7 +18,6 @@
   font-weight: normal;
   font-style: normal;
 }
-
 .openerp {
   padding: 0;
   margin: 0;
@@ -1960,10 +1958,6 @@
 .openerp .oe_form > :not(.oe_form_nosheet) header {
   padding-left: 2px;
 }
-.openerp .oe_form > :not(.oe_form_nosheet) header ul:not(.oe_tooltip_technical):not(.oe_dropdown_menu) {
-  display: inline-block;
-  float: right;
-}
 .openerp .oe_form > :not(.oe_form_nosheet) header .oe_button {
   margin: 3px 2px 1px;
 }
@@ -1980,6 +1974,10 @@
   background-image: -ms-linear-gradient(top, #fcfcfc, #dedede);
   background-image: -o-linear-gradient(top, #fcfcfc, #dedede);
   background-image: linear-gradient(to bottom, #fcfcfc, #dedede);
+}
+.openerp .oe_form header ul:not(.oe_tooltip_technical):not(.oe_dropdown_menu) {
+  display: inline-block;
+  float: right;
 }
 .openerp .oe_form header > span {
   margin-left: 4px;
@@ -3110,7 +3108,6 @@
     top: 0px;
   }
 }
-
 .kitten-mode-activated {
   background-size: cover;
   background-attachment: fixed;
